PERMISSIONS FOR JOB

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,6 +6,7 @@ on:
 
 jobs:
   release:
+    permissions: write-all
     name: "Make Release"
     runs-on: "ubuntu-latest"
 
@@ -16,7 +17,7 @@ jobs:
         run: zip -r LatamResourcePack.zip assets pack.mcmeta
       - uses: "marvinpinto/action-automatic-releases@latest"
         with:
-          repo_token: "${{ secrets.TOKEN }}"
+          repo_token: "${{ secrets.GITHUB_TOKEN }}"
           prerelease: false
           title: "Resource Pack Version"
           files: |
