--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,10 +14,10 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
       - name: "Compress"
-        run: zip -r LatamResourcePack-${{github.ref}}.zip assets pack.mcmeta
+        run: zip -r LatamResourcePack-${{github.ref_name}}.zip assets pack.mcmeta
       - name: Creating Release
         uses: ncipollo/release-action@v1.12.0
         with:
-          artifacts: "LatamResourcePack-${{github.ref}}.zip"
+          artifacts: "LatamResourcePack-${{github.ref_name}}.zip"
           generateReleaseNotes: true
           makeLatest: true
